# imps_new_framework

./: .dockerignore  .env.dist  .gitignore  DOCKER_BASE_IMAGE.md  Dockerfile  Dockerfile.base  GUNICORN_SETUP.md  build-base.ps1  build-base.sh  build_obfuscated.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: EXCEPTION_MAPPING_GUIDE.md  PYTEST_LEARNING_INDEX.md
src/: conftest.py  gunicorn_config.py  run_uvicorn.py  start_gunicorn.py  start_production.py  start_uvcorn.py  test_sample.py  uvicorn_config.py
src/chunk_upload/application/: command_handlers.py  commands.py  cqrs_service.py  queries.py  query_handlers.py
src/chunk_upload/domain/: entities.py  exceptions.py  repositories.py  services.py
src/chunk_upload/infrastructure/: apps.py  ioc.py  models.py  repositories.py  services.py  views.py
src/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py
src/core/application/: cqrs_service.py
src/core/domain/: entities.py
src/core/infrastructure/: admin.py  apps.py  auth_backends.py  ioc.py  middlewares.py  models.py  translation.py
src/identity/infrastructure/: admin.py  apps.py  ioc.py
src/identity/tests/: conftest.py
src/media/application/: cqrs_service.py
src/media/infrastructure/: admin.py  apps.py  ioc.py  urls.py
src/media/tests/: conftest.py
src/picture/application/: command_handlers.py  cqrs_service.py  event_service.py  query_handlers.py
src/picture/domain/: exceptions.py  repositories.py
src/picture/infrastructure/: admin.py  apps.py  forms.py  ioc.py  (+4 more)
(+354 files in other folders)
