[project]
name = "imps-new-framework"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "adrf>=0.1.12",
    "aiohttp>=3.13.2",
    "black>=25.12.0",
    "celery>=5.6.0",
    "channels>=4.3.2",
    "coverage>=7.13.0",
    "daphne>=4.2.1",
    "django>=5.2.5",
    "django-celery>=3.1.17",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-injector>=0.3.1",
    "django-js-reverse>=0.10.2",
    "django-modeltranslation>=0.19.19",
    "django-ninja>=1.5.1",
    "django-ninja-extra>=0.30.8",
    "django-ninja-jwt[crypto]>=5.4.2",
    "django-parsley>=0.7",
    "django-redis>=6.0.0",
    "django-rosetta>=0.10.3",
    "djangorestframework>=3.16.1",
    "docutils>=0.22.4",
    "factory-boy>=3.3.3",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "hiredis>=3.3.0",
    "isort>=7.0.0",
    "lz4>=4.4.5",
    "ninja-schema>=0.14.3",
    "orjson>=3.11.5",
    "pillow>=12.0.0",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "pyarmor>=9.2.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "python-decouple>=3.8",
    "pytz>=2025.2",
    "pyzstd>=0.19.1",
    "redis[hiredis]>=7.1.0",
    "selenium>=4.39.0",
    "uvicorn[standard]>=0.40.0",
    "zstandard>=0.25.0",
]
